# countdart

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
countdart/: __init__.py  celery_app.py  main.py  settings.py  worker.py
countdart/api/: __init__.py  cam.py  dartboard.py  games.py  test.py
countdart/database/: __init__.py  db.py
countdart/database/crud/: __init__.py  cam.py  dartboard.py
countdart/database/schemas/: __init__.py  base.py  cam.py  config.py  dart_throw.py  dartboard.py  messages.py  task.py
countdart/io/: __init__.py  usb_cam.py
countdart/operators/: __init__.py  change_detector.py  darttip_calculator.py  fps_calculator.py  homography_warper.py  operator.py  result_publisher.py  score_calculator.py  size_classifier.py
countdart/operators/img/: bbox_detector.py  change_detector.py  custom_change_detector.py  dart_segmentor.py  homography_warper.py  hough_line_detector.py  motion_detector.py  result_visualizer.py
countdart/operators/io/: __init__.py  frame_grabber.py  usb_cam.py  video_reader.py  video_writer.py
countdart/procedures/: __init__.py  base.py  collector.py  debug_recorder.py  standard.py
countdart/utils/: dartboard_model.py  misc.py  registry.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/boardmanager/: page.tsx
frontend/app/boardmanager/[board]/: page.tsx
frontend/app/components/: appshell.tsx
frontend/app/components/Camera/: calibration-canvas.tsx  calibration-modal.tsx  camera-card.tsx  camera-overview.tsx  create-form.tsx  websocket-stream.tsx
frontend/app/components/Dartboard/: Dartboard.module.css  create-form.tsx  dartboard.tsx
frontend/app/components/Sidebar/: sidebar.tsx
frontend/app/components/camera/: calibration-canvas.tsx  camera-card.tsx  camera-overview.tsx  create-form.tsx  create-sim-form.tsx  settings-modal.tsx  websocket-stream.tsx
frontend/app/components/dartboard/: create-form.tsx  dartboard-game-status.tsx  dartboard-overview.tsx  dartboard-settings.tsx  dartboard-sketch.tsx  dartboard.tsx  start-stop-button.tsx
frontend/app/components/footer/: connectivity.tsx  footer.tsx
frontend/app/components/settings/: boolean-component.tsx  float-component.tsx  int-component.tsx  select-component.tsx  setting-card.tsx  setting-component.tsx
frontend/app/components/sidebar/: sidebar.tsx
frontend/app/services/: api.tsx  game-context-provider.tsx
frontend/app/types/: schemas.tsx
requirements/: base.txt  dev.in  dev.txt  test.txt
tests/: test_api.py  test_dartboard_model.py
